# mma8x5x-rs

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build.yml  clippy.yml
examples/: linux.rs
src/: common.rs  common_read.rs  conversion.rs  lib.rs  mma845x.rs  mma8653.rs  mma865x.rs  register_access.rs  types.rs
src/common/: common.rs  common_impl.rs  config.rs  config_auto_sleep.rs  config_ff_mt.rs  config_int.rs  config_pl.rs  mod.rs  mode_change.rs  read.rs  read_measurement.rs  read_status.rs
tests/: changes_allowed_while_active.rs  common.rs  common_config.rs  common_config_ints.rs  common_config_pl.rs  common_config_sleep.rs  common_read.rs  common_read_data_status.rs  common_read_int_status.rs  common_read_measurement.rs  common_read_pl_status.rs  mma8653.rs
tests/base/: mod.rs
