[package]
name = "mma8x5x"
version = "0.1.0" # remember to update html_root_url
authors = ["Diego Barrios Romero <eldruin@gmail.com>"]
repository = "https://github.com/eldruin/mma8x5x-rs"
license = "MIT OR Apache-2.0"
description = "Platform-agnostic Rust driver for the MMA8451, MMA8452, MMA8453, MMA8652 and MMA8653 tri-axis accelerators."
readme = "README.md"
keywords = ["accelerator", "motion", "sensor", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/eldruin/mma8x5x-rs"
documentation = "https://docs.rs/mma8x5x"
include = [
    "/**/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
]
edition = "2018"

[badges]
coveralls = { repository = "eldruin/mma8x5x-rs", branch = "master", service = "github" }

[dependencies]
embedded-hal = "0.2"

[dev-dependencies]
linux-embedded-hal = "0.3"
embedded-hal-mock = "0.8"

[profile.release]
lto = true
